curabox/force-app/main/default/objects/Account/fields/Nummer_wenn_kLeadnr__c.field-meta.xml
<CustomField>
    <fullName>Nummer_wenn_kLeadnr__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Nummer wenn kLeadnr</label>
    <type>AutoNumber</type>
</CustomField>