curabox/force-app/main/default/objects/Account/fields/Online_Auftritt_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>Online_Auftritt_gew_nscht__c</fullName>
    <inlineHelpText>curabox AD Partner, welche im Rahmen der Akquisition das Partnerschaftsprogramm eingegangen sind, erhalten auf Wunsch einen Auftritt auf der pflege.de Website.</inlineHelpText>
    <label>Online Auftritt gewünscht</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>