curabox/force-app/main/default/objects/Account/fields/Partner_Hinweis__c.field-meta.xml
<CustomField>
    <fullName>Partner_Hinweis__c</fullName>
    <formula>IF( Pausiert__c = True, 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 25), 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Hinweis</label>
    <type>Text</type>
</CustomField>