curabox/force-app/main/default/objects/Account/fields/Partner_Kundennummer__c.field-meta.xml
<CustomField>
    <fullName>Partner_Kundennummer__c</fullName>
    <description>Händisch eingetragene Kundennummer der jeweiligen Partner.</description>
    <inlineHelpText>Händisch eingetragene Kundennummer der jeweiligen Partner.</inlineHelpText>
    <label>Partner Kundennummer</label>
    <length>144</length>
    <type>Text</type>
</CustomField>