curabox/force-app/main/default/objects/Account/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <label>Partner-Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aktiv</fullName>
                <default>true</default>
                <label>Aktiv</label>
            </value>
            <value>
                <fullName>Inaktiv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>