curabox/force-app/main/default/objects/Account/fields/Partner_w_nscht_keine_Bedarfsmeldung__c.field-meta.xml
<CustomField>
    <fullName>Partner_w_nscht_keine_Bedarfsmeldung__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Bitte ankreuzen, wenn der Partner explizit keine monatliche Bedarfsmeldung erhalten möchte.</inlineHelpText>
    <label>Partner wünscht keine Bedarfsmeldung</label>
    <type>Checkbox</type>
</CustomField>