curabox/force-app/main/default/objects/Account/fields/Pausiert__c.field-meta.xml
<CustomField>
    <fullName>Pausiert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partner und dessen Produkte sollen derzeit nicht in der Suche der passenden Partner gelistet werden</description>
    <inlineHelpText>Partner und dessen Produkte sollen derzeit nicht in der Suche der passenden Partner gelistet werden</inlineHelpText>
    <label>Pausiert</label>
    <type>Checkbox</type>
</CustomField>