curabox/force-app/main/default/objects/Account/fields/pausiert_ab__c.field-meta.xml
<CustomField>
    <fullName>pausiert_ab__c</fullName>
    <label>pausiert ab</label>
    <type>Date</type>
</CustomField>