curabox/force-app/main/default/objects/Account/fields/pausiert_bis__c.field-meta.xml
<CustomField>
    <fullName>pausiert_bis__c</fullName>
    <description>Bis zu welchem Tag soll der Partner pausiert werden? (Pausiert wird inklusive dem Tag!)</description>
    <inlineHelpText>Bis zu welchem Tag soll der Partner pausiert werden? (Pausiert wird inklusive dem Tag!)</inlineHelpText>
    <label>pausiert bis</label>
    <type>Date</type>
</CustomField>