curabox/force-app/main/default/objects/Account/fields/Pflegeformen__c.field-meta.xml
<CustomField>
    <fullName>Pflegeformen__c</fullName>
    <label>Pflegeformen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AD (ambulanter Dienst)</fullName>
            </value>
            <value>
                <fullName>BD (Betreuungsdienst)</fullName>
            </value>
            <value>
                <fullName>BW (Betreutes Wohnen)</fullName>
            </value>
            <value>
                <fullName>IP (Intensiv-Pflege)</fullName>
            </value>
            <value>
                <fullName>PH (Pflegeheim)</fullName>
            </value>
            <value>
                <fullName>TP (Tagespflege)</fullName>
            </value>
            <value>
                <fullName>WG (Wohngemeinschaft)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>