curabox/force-app/main/default/objects/Account/fields/PG51_Abrechnungs_Methode__c.field-meta.xml
<CustomField>
    <fullName>PG51_Abrechnungs_Methode__c</fullName>
    <label>PG51 Zuzahlungs-Methode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10% Zuzahlung</fullName>
            </value>
            <value>
                <fullName>10% Zuzahlung, mindestens 5,- € pro Artikel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>