curabox/force-app/main/default/objects/Account/fields/Range_of_care_service__c.field-meta.xml
<CustomField>
    <fullName>Range_of_care_service__c</fullName>
    <description>Reichweite des ambulanten Dienstes</description>
    <inlineHelpText>Reichweite des ambulanten Dienstes</inlineHelpText>
    <label>Reichweite des ADs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Städtisch</fullName>
            </value>
            <value>
                <fullName>Ländlich</fullName>
            </value>
            <value>
                <fullName>Betreuung von Wohnformen</fullName>
            </value>
            <value>
                <fullName>Tagespflege</fullName>
            </value>
            <value>
                <fullName>Beratungseinsätze</fullName>
            </value>
            <value>
                <fullName>Mehrere Standorte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>