curabox/force-app/main/default/objects/Account/fields/Scopevisio_MasterID__c.field-meta.xml
<CustomField>
    <fullName>Scopevisio_MasterID__c</fullName>
    <label>Scopevisio MasterID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>