curabox/force-app/main/default/objects/Account/fields/ScopeVisio_Number_creditor__c.field-meta.xml
<CustomField>
    <fullName>ScopeVisio_Number_creditor__c</fullName>
    <label>Kreditoren-Nummer ScopeVisio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>