curabox/force-app/main/default/objects/Account/fields/Selbstinstallation_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>Selbstinstallation_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selbstinstallation gewünscht</label>
    <type>Checkbox</type>
</CustomField>