curabox/force-app/main/default/objects/Account/fields/short_description__c.field-meta.xml
<CustomField>
    <fullName>short_description__c</fullName>
    <inlineHelpText>Kurze Beschreibung der Kontingente</inlineHelpText>
    <label>Kurzbeschreibung</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>