curabox/force-app/main/default/objects/Account/fields/Sonderwunsch__c.field-meta.xml
<CustomField>
    <fullName>Sonderwunsch__c</fullName>
    <description>Stellt das verkürzte Beschreibungsfeld für die Pflegedienste dar.</description>
    <inlineHelpText>Hier bitte Hinweise (Beschreibung) bezüglich des Pflegedienstes angeben.</inlineHelpText>
    <label>Hinweise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>