curabox/force-app/main/default/objects/Account/fields/Start_Partnerschaft__c.field-meta.xml
<CustomField>
    <fullName>Start_Partnerschaft__c</fullName>
    <label>Start Partnerschaft</label>
    <type>Date</type>
</CustomField>