curabox/force-app/main/default/objects/Account/fields/station_res_Ger_t_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>station_res_Ger_t_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>stationäres Gerät gewünscht</label>
    <type>Checkbox</type>
</CustomField>