curabox/force-app/main/default/objects/Account/fields/Summe_abgerechneter_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Summe_abgerechneter_Tickets__c</fullName>
    <inlineHelpText>Werte sind NETTO</inlineHelpText>
    <label>Summe abgerechneter Tickets</label>
    <summarizedField>Abrechnung_Partner__c.Rechnungswert_Netto__c</summarizedField>
    <summaryForeignKey>Abrechnung_Partner__c.Partner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>