curabox/force-app/main/default/objects/Account/fields/Telefonisches_Beratungsgespr_ch_gew_nsch__c.field-meta.xml
<CustomField>
    <fullName>Telefonisches_Beratungsgespr_ch_gew_nsch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telefonisches Beratungsgespräch gewünsch</label>
    <type>Checkbox</type>
</CustomField>