curabox/force-app/main/default/objects/Account/fields/term_of_payment_cancellation__c.field-meta.xml
<CustomField>
    <fullName>term_of_payment_cancellation__c</fullName>
    <label>Zahlungsziel Storno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>