curabox/force-app/main/default/objects/Account/fields/term_of_payment_discount__c.field-meta.xml
<CustomField>
    <fullName>term_of_payment_discount__c</fullName>
    <description>number of days within the payment discount term can be applied</description>
    <label>Skonto-Frist</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>