curabox/force-app/main/default/objects/Account/fields/ticket_cc_email_address__c.field-meta.xml
<CustomField>
    <fullName>ticket_cc_email_address__c</fullName>
    <label>Empfänger Cc Adresse Tickets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>