curabox/force-app/main/default/objects/Account/fields/TK__c.field-meta.xml
<CustomField>
    <fullName>TK__c</fullName>
    <label>TK</label>
    <length>10</length>
    <type>Text</type>
</CustomField>