curabox/force-app/main/default/objects/Account/fields/type_of_compensation_cancellation__c.field-meta.xml
<CustomField>
    <fullName>type_of_compensation_cancellation__c</fullName>
    <label>Art der Vergütung Storno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>Prozent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>