curabox/force-app/main/default/objects/Account/fields/type_of_landlord__c.field-meta.xml
<CustomField>
    <fullName>type_of_landlord__c</fullName>
    <inlineHelpText>Wählen Sie hier die Vermieterart aus</inlineHelpText>
    <label>Vermieterart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privater Vermieter</fullName>
            </value>
            <value>
                <fullName>Wohnungsgesellschaft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>