curabox/force-app/main/default/objects/Account/fields/type_of_payment_discount__c.field-meta.xml
<CustomField>
    <fullName>type_of_payment_discount__c</fullName>
    <description>prompt payment discount type (Euro or percent)</description>
    <inlineHelpText>Wählen Sie die Art der Skontierung (Euro oder Prozent)</inlineHelpText>
    <label>Art der Skontierung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>Prozent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>