curabox/force-app/main/default/objects/Account/fields/Weitere_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Weitere_E_Mail__c</fullName>
    <label>E-Mail</label>
    <type>Email</type>
</CustomField>