curabox/force-app/main/default/objects/Account/fields/Weitere_Kontaktperson__c.field-meta.xml
<CustomField>
    <fullName>Weitere_Kontaktperson__c</fullName>
    <label>Weitere Kontaktperson</label>
    <length>50</length>
    <type>Text</type>
</CustomField>