curabox/force-app/main/default/objects/Account/fields/X24h_besetzte_Notrufzentrale_gew_nscht__c.field-meta.xml
<CustomField>
    <fullName>X24h_besetzte_Notrufzentrale_gew_nscht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24h besetzte Notrufzentrale gewünscht</label>
    <type>Checkbox</type>
</CustomField>