curabox/force-app/main/default/objects/Account/fields/Zugang_letzter_Kunde__c.field-meta.xml
<CustomField>
    <fullName>Zugang_letzter_Kunde__c</fullName>
    <inlineHelpText>hier wird der Zugang des letzten Kunden dokumentiert</inlineHelpText>
    <label>Zugang letzter Kunde</label>
    <type>Date</type>
</CustomField>