curabox/force-app/main/default/objects/Account/fields/Zust_ndigkeit_F_higkeiten__c.field-meta.xml
<CustomField>
    <fullName>Zust_ndigkeit_F_higkeiten__c</fullName>
    <label>Zuständigkeit / Fähigkeiten</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aufmaßkoordinierung</fullName>
            </value>
            <value>
                <fullName>Aufmaß</fullName>
            </value>
            <value>
                <fullName>Kostenvoranschlag</fullName>
            </value>
            <value>
                <fullName>Technisches Schreiben</fullName>
            </value>
            <value>
                <fullName>Monatagerechnung</fullName>
            </value>
            <value>
                <fullName>Materialrechnung</fullName>
            </value>
            <value>
                <fullName>Umbaukoordinierung</fullName>
            </value>
            <value>
                <fullName>Montage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>