curabox/force-app/main/default/objects/Account/recordTypes/BAD_Partner.recordType-meta.xml
<RecordType>
    <fullName>BAD_Partner</fullName>
    <active>true</active>
    <description>Record Type zum Anlegen von BAD Umbau Partnern</description>
    <label>Badumbau - Partner</label>
</RecordType>