curabox/force-app/main/default/objects/Account/recordTypes/Marketing_Partner.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Partner</fullName>
    <active>true</active>
    <label>05 Marketing Partner</label>
</RecordType>