curabox/force-app/main/default/objects/Account/recordTypes/Pflege_de_Familien.recordType-meta.xml
<RecordType>
    <fullName>Pflege_de_Familien</fullName>
    <active>true</active>
    <description>Recordtype zum Anlegen von Pflege.de Familien</description>
    <label>Pflege.de - Familien</label>
</RecordType>