curabox/force-app/main/default/objects/Account/recordTypes/Pflege_de_Partner.recordType-meta.xml
<RecordType>
    <fullName>Pflege_de_Partner</fullName>
    <active>true</active>
    <description>Partnerunternehmen, mit denen pflege.de zusammenarbeitet (ZWB,PWE)</description>
    <label>Pflege.de - Partner</label>
</RecordType>