curabox/force-app/main/default/objects/Account/recordTypes/Vermieter.recordType-meta.xml
<RecordType>
    <fullName>Vermieter</fullName>
    <active>true</active>
    <description>Vermieter account für das Thema &quot;Badumbau&quot;</description>
    <label>Badumbau - Vermieter</label>
</RecordType>