curabox/force-app/main/default/objects/Account/recordTypes/X01_Pflegedienste.recordType-meta.xml
<RecordType>
    <fullName>X01_Pflegedienste</fullName>
    <active>true</active>
    <description>Pflegedienste</description>
    <label>01 Pflegedienste</label>
</RecordType>