curabox/force-app/main/default/objects/Account/recordTypes/X02_station_re_Pflegeeinrichtung.recordType-meta.xml
<RecordType>
    <fullName>X02_station_re_Pflegeeinrichtung</fullName>
    <active>true</active>
    <description>stationäre Pflegedienste</description>
    <label>02 stationäre Pflegeeinrichtung</label>
</RecordType>