curabox/force-app/main/default/objects/Account/recordTypes/X03_Kostentr_ger.recordType-meta.xml
<RecordType>
    <fullName>X03_Kostentr_ger</fullName>
    <active>true</active>
    <description>Kostenträger / Kassen</description>
    <label>03 Kostenträger</label>
</RecordType>