curabox/force-app/main/default/objects/Account/recordTypes/X04_24_h_Betreuung.recordType-meta.xml
<RecordType>
    <fullName>X04_24_h_Betreuung</fullName>
    <active>true</active>
    <description>24 Stunden Betreuung</description>
    <label>04 24 h Betreuung</label>
</RecordType>