curabox/force-app/main/default/objects/Account/validationRules/Account_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Owner</fullName>
    <active>true</active>
    <description>Prevent the change of the owner of Pflegedienst accounts.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(OwnerId),
RecordType.DeveloperName = &apos;X01_Pflegedienste&apos;,
$Profile.Name = &apos;pflege.de - Allgemein&apos;
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Der Accountinhaber von Pflegediensten darf nicht geändert werden.</errorMessage>
</ValidationRule>