curabox/force-app/main/default/objects/Account/validationRules/curabox_Kanal_nicht_mehr_aenderbar.validationRule-meta.xml
<ValidationRule>
    <fullName>curabox_Kanal_nicht_mehr_aenderbar</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(ISPICKVAL(PRIORVALUE(Kategorie__c),&quot;01 Ambulante Pflegedienste&quot;)),
ISCHANGED(Kategorie__c)
)</errorConditionFormula>
    <errorMessage>Der Kanal &quot;01 Ambulante Pflegedienste&quot; ist nicht änderbar, sobald er einmal gesetzt worden ist.</errorMessage>
</ValidationRule>