curabox/force-app/main/default/objects/Account/validationRules/Pausiert_bis_nur_wenn_pausiert_CHECK.validationRule-meta.xml
<ValidationRule>
    <fullName>Pausiert_bis_nur_wenn_pausiert_CHECK</fullName>
    <active>true</active>
    <description>&quot;bis&quot; kann nur ausgefüllt sein, wenn die Checkbox &quot;pausiert&quot; befüllt ist.</description>
    <errorConditionFormula>Pausiert__c = false &amp;&amp; !ISBLANK(pausiert_bis__c) &amp;&amp; ISBLANK(pausiert_ab__c)</errorConditionFormula>
    <errorMessage>Eine zeitliche Pausierung ist nur möglich, wenn das Feld &quot;Pausiert&quot; angehakt ist oder ein Startzeitpunkt angegeben wird.</errorMessage>
</ValidationRule>