curabox/force-app/main/default/objects/Account/listViews/Account_zuletzt_geaendert.listView-meta.xml
<ListView>
    <fullName>Account_zuletzt_geaendert</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.X01_Pflegedienste</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>hhehl,rfeis,speec,cschm2</value>
    </filters>
    <label>Account_zuletzt_geaendert</label>
</ListView>