curabox/force-app/main/default/objects/Account/listViews/Accounts_Michael_B_ning.listView-meta.xml
<ListView>
    <fullName>Accounts_Michael_B_ning</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Büning</value>
    </filters>
    <label>Accounts_Michael Büning</label>
    <language>en_US</language>
    <sharedTo>
        <group>Vertrieb_B_ning</group>
    </sharedTo>
</ListView>