curabox/force-app/main/default/objects/Account/listViews/Alle_Accounts.listView-meta.xml
<ListView>
    <fullName>Alle_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.X01_Pflegedienste</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notEqual</operation>
        <value>,hübers,peikert,hehlke,nierenz,mohr</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>ASP für Kunden</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>renafan</value>
    </filters>
    <label>Alle Accounts - Nicht zugeordnet</label>
    <language>de</language>
    <sharedTo>
        <role>Gesch_ftsf_hrung</role>
    </sharedTo>
</ListView>