curabox/force-app/main/default/objects/Account/listViews/BEARBEITUNG_ACCOUNT.listView-meta.xml
<ListView>
    <fullName>BEARBEITUNG_ACCOUNT</fullName>
    <columns>Partner_Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Kategorie__c</columns>
    <columns>Kanal_Unterpunkt__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.X01_Pflegedienste</value>
    </filters>
    <filters>
        <field>Partner_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>Accounts ohne &quot;Aktiv/Passiv&quot;-Status</label>
    <language>de</language>
    <sharedTo/>
</ListView>