curabox/force-app/main/default/objects/Account/listViews/curabox_Partner.listView-meta.xml
<ListView>
    <fullName>curabox_Partner</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Anzahl_der_Kunden__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.X01_Pflegedienste,Account.X04_24_h_Betreuung</value>
    </filters>
    <label>curabox - Partner</label>
    <language>de</language>
    <sharedTo>
        <role>Finanzbuchhaltung</role>
        <role>Gesch_ftsf_hrung</role>
        <role>Partnerbetreuung</role>
        <roleAndSubordinates>HomeCare</roleAndSubordinates>
    </sharedTo>
</ListView>