curabox/force-app/main/default/objects/Account/listViews/curabox_Partner_Henning_Pramschiefer.listView-meta.xml
<ListView>
    <fullName>curabox_Partner_Henning_Pramschiefer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Zugang_letzter_Kunde__c</columns>
    <columns>Anzahl_der_Kunden__c</columns>
    <columns>Sonderwunsch__c</columns>
    <columns>Start_Partnerschaft__c</columns>
    <columns>Aktivierung_am__c</columns>
    <columns>Keine_Partnerschaft__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Henning</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.X01_Pflegedienste</value>
    </filters>
    <label>curabox Partner - Henning Pramschiefer</label>
</ListView>