curabox/force-app/main/default/objects/Account/listViews/curabox_Partner_Karina_Redzinski.listView-meta.xml
<ListView>
    <fullName>curabox_Partner_Karina_Redzinski</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Start_Partnerschaft__c</columns>
    <columns>Zugang_letzter_Kunde__c</columns>
    <columns>Anzahl_der_Kunden__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Redzinski</value>
    </filters>
    <label>curabox Partner - Karina Redzinski</label>
    <language>de</language>
    <sharedTo>
        <group>Vertrieb_redzinski</group>
        <role>Gesch_ftsf_hrung</role>
    </sharedTo>
</ListView>