curabox/force-app/main/default/objects/Account/listViews/curabox_Partner_Katharina_Bach.listView-meta.xml
<ListView>
    <fullName>curabox_Partner_Katharina_Bach</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Bach</value>
    </filters>
    <label>curabox Partner_Katharina Bach</label>
    <language>en_US</language>
    <sharedTo>
        <group>Vertrieb_bach</group>
    </sharedTo>
</ListView>