curabox/force-app/main/default/objects/Account/listViews/curabox_Partner_Marita_Harms.listView-meta.xml
<ListView>
    <fullName>curabox_Partner_Marita_Harms</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>Start_Partnerschaft__c</columns>
    <columns>Zugang_letzter_Kunde__c</columns>
    <columns>Anzahl_der_Kunden__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Harms</value>
    </filters>
    <label>curabox Partner - Marita Harms</label>
    <language>en_US</language>
    <sharedTo>
        <group>Vertrieb</group>
    </sharedTo>
</ListView>